--- a/src/main/java/com/insatoulouse/chatsystem/gui/Login.form
+++ b/src/main/java/com/insatoulouse/chatsystem/gui/Login.form
@@ -63,7 +63,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <toolTipText value=""/>
+            </properties>
           </component>
         </children>
       </grid>
