--- a/src/main/java/com/insatoulouse/chatsystem/gui/Chat.form
+++ b/src/main/java/com/insatoulouse/chatsystem/gui/Chat.form
@@ -5,11 +5,11 @@
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties>
-      <minimumSize width="200" height="200"/>
+      <minimumSize width="400" height="300"/>
     </properties>
     <border type="none"/>
     <children>
-      <scrollpane id="c5f7a" binding="userlistScrollPane">
+      <scrollpane id="c5f7a">
         <constraints border-constraint="West"/>
         <properties>
           <focusable value="false"/>
@@ -153,6 +153,7 @@
         <constraints border-constraint="Center"/>
         <properties>
           <focusable value="false"/>
+          <preferredSize width="356" height="128"/>
         </properties>
         <border type="empty"/>
         <children>
