--- a/src/main/java/com/insatoulouse/chatsystem/gui/Chat.form
+++ b/src/main/java/com/insatoulouse/chatsystem/gui/Chat.form
@@ -125,6 +125,19 @@
                   <text value="To:"/>
                 </properties>
               </component>
+              <component id="e7008" class="javax.swing.JButton" binding="send">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <background color="-328966"/>
+                  <borderPainted value="false"/>
+                  <icon value="ic_attachment_black.png"/>
+                  <selected value="false"/>
+                  <text value=""/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="3eb67" layout-manager="GridBagLayout">
